# config-manager

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  cookbook.md
config-manager-proc/: Cargo.toml  README.md
config-manager-proc/src/: generator.rs  lib.rs  utils.rs
config-manager-proc/src/generator/: nested.rs  primal.rs  utils.rs
config-manager-proc/src/utils/: attributes.rs  config.rs  field.rs  parser.rs  top_level.rs
config-manager-proc/src/utils/field/: utils.rs
config-manager-proc/src/utils/parser/: clap.rs  optional.rs  utils.rs
examples/: Cargo.toml  README.md  config.toml
examples/src/: demo.rs  json_syntax.rs
src/: __cookbook.rs  __private.rs  lib.rs  utils.rs
tests/: README.md  mods.rs
tests/data/: config.json  config.toml  config.yml
tests/parse_method/: clap.rs  default.rs  deserialize_with.rs  empty.rs  env.rs  file.rs  flatten.rs  get_command.rs  init_from.rs  integration_test.rs  layers.rs  parse_options.rs  subcommand.rs  tables.rs
