[package]
name = "config-manager-proc"
version = "0.4.2"
edition = "2021"
authors = [
    "Mikhail Mikhailov <m.mikhailov@kryptonite.ru>",
    "Nikolay Pakharev <n.pakharev@kryptonite.ru>",
]
description = "Macro implementation for config-manager-rs derives"
readme = "README.md"
repository = "https://github.com/3xMike/config-manager/tree/main/config-manager-proc"
license = "MIT"
keywords = ["macro", "derive", "proc_macro", "config", "configuration"]
categories = [
    "config",
    "command-line-interface",
    "development-tools::procedural-macro-helpers",
]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5"
proc-macro2 = "1.0.91"
quote = "1.0.35"
strum = "0.24.0"
strum_macros = "0.24.0"
syn = { version = "2.0.100", features = ["full", "extra-traits"] }
